--- a/package.json
+++ b/package.json
@@ -10,21 +10,22 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.17",
-    "@heroicons/react": "^2.0.18",
+    "@headlessui/react": "^1.7.19",
+    "@heroicons/react": "^2.2.0",
     "@tailwindcss/typography": "^0.5.16",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.1",
     "critters": "^0.0.23",
+    "dom-to-image": "^2.6.0",
     "html2canvas": "^1.4.1",
     "next": "^14.0.0",
-    "prismjs": "^1.29.0",
+    "prismjs": "^1.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-markdown": "^9.0.0",
-    "react-syntax-highlighter": "^15.5.0",
-    "rehype-highlight": "^7.0.0",
-    "remark-gfm": "^4.0.0",
-    "tailwind-merge": "^2.0.0"
+    "react-markdown": "^9.1.0",
+    "react-syntax-highlighter": "^15.6.1",
+    "rehype-highlight": "^7.0.2",
+    "remark-gfm": "^4.0.1",
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
