--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prismjs": "^1.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-markdown": "^9.1.0",
     "react-syntax-highlighter": "^15.6.1",
     "rehype-highlight": "^7.0.2",
@@ -34,8 +35,8 @@
     "@types/react-dom": "^18.2.0",
     "@types/react-syntax-highlighter": "^15.5.0",
     "autoprefixer": "^10.4.0",
-    "eslint": "^8.0.0",
-    "eslint-config-next": "^14.0.0",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.31",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.0.0"
