--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "critters": "^0.0.23",
     "dom-to-image": "^2.6.0",
     "html2canvas": "^1.4.1",
+    "katex": "^0.16.22",
     "next": "^14.0.0",
     "prismjs": "^1.30.0",
     "react": "^18.2.0",
@@ -25,7 +26,9 @@
     "react-markdown": "^9.1.0",
     "react-syntax-highlighter": "^15.6.1",
     "rehype-highlight": "^7.0.2",
+    "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
